tests/invalid/coerce_clobbered.err_exp
coerce_clobbered.m:021: In clause for `bad(in(clobbered), out)':
coerce_clobbered.m:021:   in coerce expression:
coerce_clobbered.m:021:   mode error: the [38;5;87mcoerced term[39;49m has instantiatedness
coerce_clobbered.m:021:   [38;5;203m`clobbered',[39;49m but it must have a [38;5;40mground[39;49m inst.
